bug imp people css alignment, tabchart click total occurrences, filter tooltip content

--- a/src/styles/Dashboard/ImportantPeopleChart.css
+++ b/src/styles/Dashboard/ImportantPeopleChart.css
@@ -167,7 +167,7 @@ h5.imp-top-title {
 }
 
 .imp-selected-section {
-    width: calc(100%);
+    width: 100%;
     height: 85%;
 
     display: flex;
@@ -218,14 +218,20 @@ h5.imp-top-title {
 }
 
 
+.table-imp-people { table-layout: fixed; width:100%; }
+
 .imp-th {
+    
     width: 28%;
     padding: 1%;
-    text-overflow: clip;
+
+    word-wrap: break-word;
     font-size: smaller;
     border-right: 1px solid #dddddd;
     border-bottom: 1px solid #dddddd;
     font-weight: normal;
+
+    
 }
 
 .imp-td {
