--- a/src/styles/Dashboard/TabChart.css
+++ b/src/styles/Dashboard/TabChart.css
@@ -223,13 +223,12 @@
     position: absolute;
     left: 0;
 	background-color: white;
-    min-width: 200px;
     z-index: 1;
 }
 
 .tabchart-dropdown-content-show button {
 
-    width: 200px;
+    width: 250px;
     text-align: left;
 	display: flex;
 
